# professionally-me

./: .gitignore  LICENSE  README.md  app.py  config.json  main.py  pyproject.toml  rag_exploration.ipynb  refresh_data.py  requirements.txt
data/: linkedin.json  linkedin_clean.json  summary.txt
data/education/: bachelors_mumbai_university.txt  masters_epita.txt
data/experience/: scor_automation_engineer.txt  zeus_learning.txt
src/: clean_linkedin.py  data_loader.py  fetch_linkedin.py
